--- a/styles/less/footer.less
+++ b/styles/less/footer.less
@@ -68,6 +68,8 @@ body > footer {
     justify-content: center;
     background: none;
     box-shadow: none;
+    padding: 2em 0;
+    margin: 1rem auto;
   	.contact {
   		color: inherit;
   		a:hover {
