--- a/styles/less/home.less
+++ b/styles/less/home.less
@@ -237,31 +237,5 @@ body.home  {
     }
   }
 
-  footer {
-    color: gray;
-    padding: 4rem 1rem;
-    order: 3;
-    flex: 0 1 auto;
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    @media screen and (min-width: @screen-md) {
-      flex-grow: 1;
-    }
-
-
-  }
-  blockquote {
-    font-weight: 600;
-    text-align: center;
-    margin: 0;
-    flex: 0 1 400px;
-    &::after {
-      content: '-Ferris Bueller';
-      display: block;
-      font-weight: 300;
-    }
-  }
 
 }
